# metacoq

./: .gitignore  .mailmap  .merlin  .travis.yml  DOC.md  INSTALL.md  LICENSE  METACOQ.md  Make  Makefile  Makefile.coq.conf  Makefile.coq.conf.patch  README-MATERIAL.md  README.md  RELEASING.md  TODO  TODO.md  _CheckerProject  _CompilerProject  _CoqProject  build-packages.sh  cast-tests.nix  checktodos.sh  configure.sh  coq-metacoq-checker.opam  coq-metacoq-common.opam  coq-metacoq-erasure-plugin.opam  coq-metacoq-erasure.opam  coq-metacoq-extraction.opam  coq-metacoq-pcuic.opam  coq-metacoq-plugins.opam  coq-metacoq-quotation.opam  coq-metacoq-safechecker-plugin.opam  coq-metacoq-safechecker.opam  coq-metacoq-template-pcuic.opam  coq-metacoq-template.opam  coq-metacoq-translations.opam  coq-metacoq-typed-erasure.opam  coq-metacoq-utils.opam  coq-metacoq.opam  (+17 more)
.github/: dependabot.yml  nix-action-coq-8.17-macos.yml  nix-action-coq-8.17-ubuntu.yml  nix-makes.yml
.nix/: cachedMake.sh  config.nix  coq-nix-toolbox.nix  default.nix  nixpkgs.nix  overlay.nix  renameNixActions.sh
Translation/: Example.v  ExamplesUtil.v  FinalTranslation.v  ITyping.v  ITypingLemmata.v  ITypingMore.v  Induction.v  Makefile  PackLifts.v  Quotes.v  README.md  Reduction.v  SAst.v  SCommon.v  SInduction.v  SLiftSubst.v  Translation.v  XTyping.v  _CoqProject
bidirectional/: _CoqProject
cast-tests/: Makefile  Makefile.coq.local  _CoqProject  castcic.v  dirty.v
checker/: Makefile  Makefile.coq.local  Makefile.local  Makefile.plugin.local  _CoqProject  _CoqProject.in  _PluginProject.in  demo.v  update_plugin.sh
common/: Makefile  _CoqProject.in
dependency-graph/: dependency-graph.md  depgraph-2020-03-20.dot  depgraph-2020-09-24.dot  depgraph-2020-11-26.dot  depgraph-2020-11-27.dot  depgraph-2020-11-28.dot  depgraph-2022-01-07.dot  depgraph-2022-01-26.dot  depgraph-2022-07-01.dot  generate-depgraph.sh
docs/: README.md  _config.yml
erasure/: Makefile  Makefile.erasure.local  Makefile.plugin.local  _CoqProject.in  _PluginProject.in  clean_extraction.sh
erasure-plugin/: Makefile  Makefile.plugin.local  _CoqProject.in  _PluginProject.in  clean_extraction.sh
examples/: Makefile  Makefile.coq.local  _CoqProject  _CoqProject.in  add_constructor.v  constructor_tac.v  demo.v  metacoq_tour.v  metacoq_tour_prelude.v  modules.v  tauto.v  typing_correctness.v
extraction/: Makefile  Makefile.plugin.local  _CoqProject  _CoqProject.in  _PluginProject  _PluginProject.in  clean_extraction.sh
html/: MetaCoq.Checker.All.html  MetaCoq.Checker.Closed.html  MetaCoq.Checker.Extraction.html  MetaCoq.Checker.Generation.html  MetaCoq.Checker.LibHypsNaming.html  MetaCoq.Checker.Loader.html  MetaCoq.Checker.MetaTheory.html  MetaCoq.Checker.Normal.html  MetaCoq.Checker.Reduction.html  MetaCoq.Checker.Reflect.html  MetaCoq.Checker.Retyping.html  MetaCoq.Checker.Substitution.html  MetaCoq.Checker.Typing.html  MetaCoq.Checker.TypingWf.html  MetaCoq.Checker.Validity.html  MetaCoq.Checker.WcbvEval.html  MetaCoq.Checker.Weakening.html  MetaCoq.Checker.WeakeningEnv.html  MetaCoq.Checker.WfInv.html  MetaCoq.Checker.uGraph.html  MetaCoq.Checker.wGraph.html  MetaCoq.Erasure.EAll.html  MetaCoq.Erasure.EArities.html  MetaCoq.Erasure.EAst.html  MetaCoq.Erasure.EAstUtils.html  MetaCoq.Erasure.EInduction.html  MetaCoq.Erasure.EInversion.html  MetaCoq.Erasure.ELiftSubst.html  MetaCoq.Erasure.EPretty.html  MetaCoq.Erasure.ESubstitution.html  MetaCoq.Erasure.ETyping.html  MetaCoq.Erasure.EWcbvEval.html  MetaCoq.Erasure.EWndEval.html  MetaCoq.Erasure.ErasureCorrectness.html  MetaCoq.Erasure.ErasureFunction.html  MetaCoq.Erasure.Extract.html  MetaCoq.Erasure.Extraction.html  MetaCoq.Erasure.Loader.html  MetaCoq.Erasure.Prelim.html  MetaCoq.Erasure.SafeErasureFunction.html  (+128 more)
pcuic/: Makefile  Makefile.pcuic.local  Makefile.plugin.local  _CoqProject  _CoqProject.in  _PluginProject  _PluginProject.in  clean_extraction.sh  templateToPCUIC.hack  templateToPCUIC.patch  templateToPCUICmli.patch
plugin-demo/: Makefile  README.md  _CoqProject
quotation/: Makefile  _CoqProject.in
safechecker/: Makefile  Makefile.coq.local  Makefile.local  Makefile.plugin.local  Makefile.safechecker.local  _CoqProject.in  _PluginProject.in  clean_extraction.sh  demo.v  update_plugin.sh
safechecker-plugin/: Makefile  Makefile.plugin.local  _CoqProject.in  _PluginProject.in  clean_extraction.sh  demo.v
src/: .merlin  Makefile  _tags  coq.itarget  reify.ml4  reify.mli  template_coq.ml4  template_coq.mli  template_coq_checker.ml4  template_coq_checker_plugin.mllib  template_coq_mod.ml  template_coq_plugin.mllib  template_plugin.mlpack
template-coq/: .gitignore  META.coq-metacoq-template  META.coq-metacoq-template-coq  META.coq-metacoq-template-ocaml  META.template-coq  Makefile  Makefile.coq.local  Makefile.plugin.local  Makefile.plugin.local-late  Makefile.template.local  _CoqProject  _CoqProject.in  _PluginProject  _PluginProject.in  _TemplateCoqProject  _TemplateCoqProject.in  demo.v  extraction.patch  metacoq-config  specFloat.patch  update_plugin.sh
template-pcuic/: Makefile  Makefile.plugin  Makefile.plugin.conf  Makefile.safechecker  Makefile.safechecker.conf  Makefile.templatepcuic  Makefile.templatepcuic.conf  _CoqProject  _CoqProject.in  _PluginProject  _PluginProject.in  metacoq-config
test-suite/: CheckerTest.v  ErasureTests.v  Makefile  Makefile.coq.local  TypeAnnotationTests.v  TypingTests.v  _CoqProject  _CoqProject.in  add_constructor.v  bug1.v  bug2.v  bug3.v  bug369.v  bug4.v  bug441.v  bug5.v  bug6.v  bug6_2.v  bug7.v  bug8.v  bugChecker.v  bugUnquote1.v  bug_mk_def.v  bug_quote_pstring.v  bugkncst.v  case.v  castprop.v  cofix.v  demo.v  erasure_live_test.v  erasure_test.v  evars.v  extractable.v  hnf_ctor.v  hott_example.v  inferind.v  inferindunivs.v  int.v  issue1042.v  issue27.v  (+35 more)
theories/: All.v  Ast.v  AstUtils.v  Checker.v  Erasure.v  Example.v  Extraction.v  FinalTranslation.v  IAst.v  ILiftSubst.v  ITyping.v  Induction.v  LiftSubst.v  Makefile  MetaTheory.v  PackLifts.v  README.md  SAst.v  SCommon.v  SLiftSubst.v  Template.v  (+15 more)
(+1098 files in other folders)
