opam-version: "2.0"
version: "dev"
maintainer: "matthieu.sozeau@inria.fr"
homepage: "https://metacoq.github.io/metacoq"
dev-repo: "git+https://github.com/MetaCoq/metacoq.git#main"
bug-reports: "https://github.com/MetaCoq/metacoq/issues"
authors: ["Abhishek Anand <aa755@cs.cornell.edu>"
          "Danil Annenkov <danil.v.annenkov@gmail.com>"
          "Simon Boulier <simon.boulier@inria.fr>"
          "Cyril Cohen <cyril.cohen@inria.fr>"
          "Yannick Forster <forster@ps.uni-saarland.de>"
          "Jason Gross <jgross@mit.edu>"
          "Fabian Kunze <fkunze@fakusb.de>"
          "Meven Lennon-Bertrand <Meven.Bertrand@univ-nantes.fr>"
          "Kenji Maillard <kenji.maillard@inria.fr>"
          "Gregory Malecha <gmalecha@gmail.com>"
          "Jakob Botsch Nielsen <Jakob.botsch.nielsen@gmail.com>"
          "Matthieu Sozeau <matthieu.sozeau@inria.fr>"
          "Nicolas Tabareau <nicolas.tabareau@inria.fr>"
          "Théo Winterhalter <theo.winterhalter@inria.fr>"
]
license: "MIT"
build: [
  ["bash" "./configure.sh"]
  [make "-j" "%{jobs}%" "-C" "common"]
]
install: [
  [make "-C" "common" "install"]
]
depends: [
  "coq-metacoq-utils" {= version}
]
synopsis: "The common library of Template Coq and PCUIC"
description: """
MetaCoq is a meta-programming framework for Coq.
"""
