opam-version: "2.0"
maintainer: "matthieu.sozeau@inria.fr"
homepage: "https://metacoq.github.io/metacoq"
dev-repo: "git+https://github.com/MetaCoq/metacoq.git#coq-8.8"
bug-reports: "https://github.com/MetaCoq/metacoq/issues"
authors: ["Abhishek Anand <aa755@cs.cornell.edu>"
          "Simon Boulier <simon.boulier@inria.fr>"
          "Cyril Cohen <cyril.cohen@inria.fr>"
          "Yannick Forster <forster@ps.uni-saarland.de>"
          "Fabian Kunze <fkunze@fakusb.de>"
          "Gregory Malecha <gmalecha@gmail.com>"
          "Matthieu Sozeau <matthieu.sozeau@inria.fr>"
          "Nicolas Tabareau <nicolas.tabareau@inria.fr>"
          "Théo Winterhalter <theo.winterhalter@inria.fr>"
]
license: "MIT"
build: [
  ["sh" "./configure.sh"]
  [make "-j%{jobs}%" "-C" "pcuic"]
]
install: [
  [make "-C" "pcuic" "install"]
]
depends: [
  "ocaml" {> "4.02.3"}
  "coq" {>= "8.9" & < "8.10~"}
  "coq-equations" {>= "1.2"}
  "coq-metacoq-template" {= version}
  "coq-metacoq-checker" {= version}
]
synopsis: "A type system equivalent to Coq's and its metatheory"
description: """
MetaCoq is a meta-programming framework for Coq.

The PCUIC module provides a cleaned-up specification of Coq's typing algorithm along
with a certified typechecker for it. This module includes the standard metatheory of
PCUIC: Weakening, Substitution, Confluence and Subject Reduction are proven here.
"""
# url {
#   src: "https://github.com/MetaCoq/metacoq/archive/v2.1-beta3.tar.gz"
#   checksum: "md5=e81b8ecabef788a10337a39b095d54f3"
# }
