opam-version: "2.0"
version: "1.0+8.16"
maintainer: "matthieu.sozeau@inria.fr"
homepage: "https://metacoq.github.io/metacoq"
dev-repo: "git+https://github.com/MetaCoq/metacoq.git#coq-8.11"
bug-reports: "https://github.com/MetaCoq/metacoq/issues"
authors: ["Abhishek Anand <aa755@cs.cornell.edu>"
          "Danil Annenkov <danil.v.annenkov@gmail.com>"
          "Simon Boulier <simon.boulier@inria.fr>"
          "Cyril Cohen <cyril.cohen@inria.fr>"
          "Yannick Forster <forster@ps.uni-saarland.de>"
          "Fabian Kunze <fkunze@fakusb.de>"
          "Meven Lennon-Bertrand <Meven.Bertrand@univ-nantes.fr>"
          "Gregory Malecha <gmalecha@gmail.com>"
          "Jakob Botsch Nielsen <Jakob.botsch.nielsen@gmail.com>"
          "Matthieu Sozeau <matthieu.sozeau@inria.fr>"
          "Nicolas Tabareau <nicolas.tabareau@inria.fr>"
          "Théo Winterhalter <theo.winterhalter@inria.fr>"
]
license: "MIT"
build: [
  ["sh" "./configure.sh"]
  [make "-j" "%{jobs}%" "-C" "pcuic"]
]
install: [
  [make "-C" "pcuic" "install"]
]
depends: [
  "coq-metacoq-template" {= version}
]
synopsis: "A type system equivalent to Coq's and its metatheory"
description: """
MetaCoq is a meta-programming framework for Coq.

The PCUIC module provides a cleaned-up specification of Coq's typing algorithm along
with a certified typechecker for it. This module includes the standard metatheory of
PCUIC: Weakening, Substitution, Confluence and Subject Reduction are proven here.
"""
