opam-version: "2.0"
version: "8.15.dev"
maintainer: "matthieu.sozeau@inria.fr"
homepage: "https://metacoq.github.io/metacoq"
dev-repo: "git+https://github.com/MetaCoq/metacoq.git#coq-8.11"
bug-reports: "https://github.com/MetaCoq/metacoq/issues"
authors: ["Abhishek Anand <aa755@cs.cornell.edu>"
          "Simon Boulier <simon.boulier@inria.fr>"
          "Cyril Cohen <cyril.cohen@inria.fr>"
          "Yannick Forster <forster@ps.uni-saarland.de>"
          "Fabian Kunze <fkunze@fakusb.de>"
          "Gregory Malecha <gmalecha@gmail.com>"
          "Matthieu Sozeau <matthieu.sozeau@inria.fr>"
          "Nicolas Tabareau <nicolas.tabareau@inria.fr>"
          "Théo Winterhalter <theo.winterhalter@inria.fr>"
]
license: "MIT"
build: [
  ["sh" "./configure.sh"]
  [make "-j" "%{jobs}%" "-C" "safechecker"]
]
install: [
  [make "-C" "safechecker" "install"]
]
depends: [
  "coq-metacoq-pcuic" {= version}
]
synopsis: "Implementation and verification of safe conversion and typechecking algorithms for Coq"
description: """
MetaCoq is a meta-programming framework for Coq.

The SafeChecker modules provides a correct implementation of
weak-head reduction, conversion and typechecking of Coq definitions and global environments.
"""
