opam-version: "2.0"
maintainer: "matthieu.sozeau@inria.fr"
homepage: "https://metacoq.github.io/metacoq"
dev-repo: "git+https://github.com/MetaCoq/metacoq.git#coq-8.8"
bug-reports: "https://github.com/MetaCoq/metacoq/issues"
authors: ["Abhishek Anand <aa755@cs.cornell.edu>"
          "Simon Boulier <simon.boulier@inria.fr>"
          "Cyril Cohen <cyril.cohen@inria.fr>"
          "Yannick Forster <forster@ps.uni-saarland.de>"
          "Fabian Kunze <fkunze@fakusb.de>"
          "Gregory Malecha <gmalecha@gmail.com>"
          "Matthieu Sozeau <matthieu.sozeau@inria.fr>"
          "Nicolas Tabareau <nicolas.tabareau@inria.fr>"
          "Théo Winterhalter <theo.winterhalter@inria.fr>"
]
license: "MIT"
build: [
  ["sh" "./configure.sh"]
  [make "-j%{jobs}%" "template-coq"]
]
install: [
  [make "-C" "template-coq" "install"]
]
depends: [
  "ocaml" {> "4.02.3"}
  "coq" {>= "8.9" & < "8.10~"}
]
synopsis: "A quoting and unquoting library for Coq in Coq"
description: """
MetaCoq is a meta-programming framework for Coq.

Template Coq is a quoting library for Coq. It takes Coq terms and
constructs a representation of their syntax tree as a Coq inductive data
type. The representation is based on the kernel's term representation.

In addition to a complete reification and denotation of CIC terms,
Template Coq includes:

- Reification of the environment structures, for constant and inductive declarations.
- Denotation of terms and global declarations
- A monad for manipulating global declarations, calling the type
  checker, and inserting them in the global environment, in the style of
  MetaCoq/MTac.
"""
# url {
#   src: "https://github.com/MetaCoq/metacoq/archive/v2.1-beta3.tar.gz"
#   checksum: "md5=e81b8ecabef788a10337a39b095d54f3"
# }
