opam-version: "2.0"
name: "coq-typed-extraction"
version: "dev"
synopsis: "Typed extraction in Coq"
description: """
Extraction of types, certifying transformations (eta, inlining), type annotations, the dearg optimisation and corresponding proofs
"""
maintainer: "Danil Annenkov <danil.v.annenkov@gmail.com>"
authors: "The COBRA team"
license: "MIT"
homepage: "https://github.com/AU-COBRA/typed-extraction"
dev-repo: "git+https://github.com/AU-COBRA/typed-extraction.git"
bug-reports: "https://github.com/AU-COBRA/typed-extraction/issues"

depends: [
  "coq" {>= "8.14" & < "8.17~"}
  "coq-metacoq-template" {>= "1.1.1"}
  "coq-metacoq-pcuic" {>= "1.1.1"}
  "coq-metacoq-safechecker" {>= "1.1.1"}
  "coq-metacoq-erasure" {>= "1.1.1"}
  "coq-equations" {>= "1.3"}
]

build: [
  [make]
  [make "examples"] {with-test}
  [make "html"] {with-doc}
]
install: [
  [make "install"]
  [make "-C" "examples" "install"] {with-test}
]
