opam-version: "2.0"              
version: "8.15.dev"
maintainer: "matthieu.sozeau@inria.fr"
homepage: "https://metacoq.github.io/metacoq"
dev-repo: "git+https://github.com/MetaCoq/metacoq.git#coq-8.16"
bug-reports: "https://github.com/MetaCoq/metacoq/issues"
authors: ["Abhishek Anand <aa755@cs.cornell.edu>"
          "Simon Boulier <simon.boulier@inria.fr>"
          "Cyril Cohen <cyril.cohen@inria.fr>"
          "Yannick Forster <forster@ps.uni-saarland.de>"
          "Fabian Kunze <fkunze@fakusb.de>"
          "Gregory Malecha <gmalecha@gmail.com>"
          "Matthieu Sozeau <matthieu.sozeau@inria.fr>"
          "Nicolas Tabareau <nicolas.tabareau@inria.fr>"
          "Théo Winterhalter <theo.winterhalter@inria.fr>"
]
license: "MIT"
depends: [
  "coq-metacoq-template" {= version}
  "coq-metacoq-pcuic" {= version}
  "coq-metacoq-safechecker" {= version}
  "coq-metacoq-erasure" {= version}
  "coq-metacoq-translations" {= version}
]
build: [
  ["sh" "./configure.sh" ] {with-test}
  [make "-C" "examples" ] {with-test}
  [make "-C" "test-suite" ] {with-test}
]
synopsis: "A meta-programming framework for Coq"
description: """
MetaCoq is a meta-programming framework for Coq.

The meta-package includes the template-coq library,
the PCUIC development including a verified equivalence between Coq and PCUIC, 
a safe type checker and verified erasure for PCUIC and example translations. 

See individual packages for more detailed descriptions.
"""
